# pam-pgsql

./: .gitignore  CMakeLists.txt  Dockerfile
b64/: decode.h  encode.h
cmake/: FindPAM.cmake
src/: backend_pgsql.c  config.h
